# articles-api

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  test.db
.github/workflows/: pyci.yml
.postman/: api
alembic/: env.py
alembic/versions/: 3c769bfd7e90_add_initial_tables.py  aa572a9c826a_change_a_column.py  ad95178caeac_update_user_table.py  b567ade113ab_create_account_table.py
api_server/: Dockerfile  database.py  dependencies.py  requirements.txt  server.py
api_server/api_server/: database.py  dependencies.py
api_server/api_server/articles/: __init__.py  crud.py  models.py
api_server/api_server/events/: events.py
api_server/api_server/routers/: articles.py  statistics.py  users.py
api_server/api_server/tokens/: models.py  token.py
api_server/api_server/users/: crud.py  models.py  schemas.py
api_server/articles/: __init__.py  crud.py  schemas.py
api_server/routers/: articles.py  events.py  users.py
api_server/tests/: test_articles.py  test_users.py  utils.py
api_server/tests/fixtures/: articles.json  users.json
api_server/tokens/: token.py
api_server/users/: crud.py  models.py  schemas.py  users.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  index.tsx
frontend/src/components/: Article.tsx  Article_create.tsx  Article_delete.tsx  Article_update.tsx  Articles.tsx  Auth.tsx  Home.tsx  Login.tsx  Logout.tsx  SignUp.tsx  User.tsx  User_delete.tsx  User_update.tsx  Users.tsx  Utils.tsx
listening_server/: Dockerfile  listener.py  requirements.txt  server.py
nginx/: Dockerfile  docker.loc.crt  docker.loc.key
nginx/conf.d/: api_server.conf
postgres-data/base/1/: 2619
postgres-data/global/: 1260  1262  2671  2676  pg_control
postgres-data/pg_stat/: global.stat
postman/collections/: articles_api.json
rendering_server/: Dockerfile  requirements.txt  sender.py  server.py  utils.py
rendering_server/mail_service/: 1.py  listener.py  sender.py
rendering_server/routers/: articles.py  users.py  utils.py
rendering_server/templates/: article.html  article_create.html  article_delete.html  article_update.html  articles.html  base.html  index.html  login.html  moderators.html  sign-up.html  user.html  user_delete.html  user_update.html  users.html
